[project]
name = "stable-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=2.0.5",
    "clip",
    "diffusers>=0.32.2",
    "einops>=0.8.1",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "invisible-watermark>=0.2.0",
    "kornia>=0.8.0",
    "omegaconf>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pudb>=2024.1.3",
    "pytorch-lightning>=2.5.0.post0",
    "streamlit>=1.43.1",
    "taming-transformers",
    "torch>=2.6.0",
    "torch-fidelity>=0.3.0",
    "torchmetrics>=1.6.2",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git", rev = "main" }
taming-transformers = { git = "https://github.com/CompVis/taming-transformers.git", rev = "master" }
